Adding champion, permission locking on commands, media/emojis, and other enhancements
New dev trait emoji support

Team name, location, and color support

Cleanup

Linted

Lint Fully Clean

Adding pipeline

run workflow on main and dev branch

Adding champion, permission locking on commands, media/emojis, and other enhancements

fixing the path

fixing workflow lint issues

New Book Flight command, for those that can't talk trash

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,11 @@
 # TOKEN = 
 # GUILD_ID = 
 # CLIENT_ID = 
-
+# DEV =
 # MONGODB_URI = 
+
+# EMOJI_UNKNOWN = ''
+# EMOJI_NORMAL = ''
+# EMOJI_STAR = ''
+# EMOJI_SUPERSTAR = ''
+# EMOJI_XFACTOR = ''
