--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,11 @@
 # GUILD_ID = 
 # CLIENT_ID = 
 # DEV =
+
 # MONGODB_URI = 
+
+# EMOJI_UNKNOWN = ''
+# EMOJI_NORMAL = ''
+# EMOJI_STAR = ''
+# EMOJI_SUPERSTAR = ''
+# EMOJI_XFACTOR = ''
