--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord-api-types": "^0.37.45",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "mongodb": "^5.5.0",
