--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ckey": "^1.0.3",
     "discord-api-types": "^0.37.45",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "eslint": "^8.41.0"
   }
 }
