--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "all": "^0.0.0",
     "ckey": "^1.0.3",
+    "dependencies": "^0.0.1",
     "discord-api-types": "^0.37.45",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
