--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jquery": "^3.5.16",
     "all": "^0.0.0",
     "ckey": "^1.0.3",
     "dependencies": "^0.0.1",
