--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
-    "eslint": "^8.41.0"
+    "eslint": "^8.41.0",
+    "ts-node": "^10.9.1"
   }
 }
