Linter is now running, removing info commands for now, and adding missing source to env variable

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,14 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": "eslint:recommended",
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "env": {
     "node": true,
-    "es6": true,
-    "plugin": "@typescript-eslint/eslint-recommended"
+    "es6": true
   },
   "parserOptions": {
     "ecmaVersion": 2021
