--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-bot",
   "version": "0.2.2",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,12 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "all": "^0.0.0",
+    "dependencies": "^0.0.1",
+    "discord-api-types": "^0.37.45",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.41.0"
+    "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint": "^8.43.0",
+    "ts-node": "^10.9.1"
   }
 }
